

9/21/2011
added the ability to pass a sections list to the vocab class. This enables me to adjust to different websites.
Added support for stern.de and spiegel.de
Added background script to handle the cross-domain requests.