@@ -6,6 +6,7 @@
     <title>background page</title>
     <script type="text/javascript" src="../htdoc/jquery-1.6.2.js"></script>
     <script type="text/javascript" src="background.js"></script>
+    <script type="text/javascript" src="../htdoc/get_def.js"></script>
   </head>
   <body>
 
