@@ -10,6 +10,7 @@
     <script type="text/javascript" src="jquery-1.6.2.js"></script>          
     <script type="text/javascript" src="hotkeys.js"></script>          
     <script type="text/javascript" src="add_defs.js"></script>          
+    <script type="text/javascript" src="get_def.js"></script>          
     <script type="text/javascript">                                         
       vocab_init("de", "en");
     </script>
